<resources>
    <string name="app_name">iSign</string>
    <string name="web_client_id">
        540670786362-cp3si405stkq5e4evdm2mih2f4gnqvdr.apps.googleusercontent.com
    </string>
    <string name="start_btn">Start</string>
    <string name="media_pipe">MediaPipe</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum recognized results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum recognized results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the gesture recognizer.</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_hand_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_hand_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_hand_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_delegate">Delegate</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Do Some Signs!</string>
    <string name="home_sub_title">Welcome to home</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_camera">Camera Mode</string>
    <string name="btn_game_start">Start Game</string>
    <string name="btn_play_again">Play Again</string>
    <string name="btn_back_home">Main Menu</string>
    <string name="btn_list_of_sign">List Of Signs</string>
    <string name="btn_leader">Leaderboard</string>
    <string name="started_title">iSign</string>
    <string name="started_subtitle">You Sign, I Define</string>
    <string name="started_sub_title">
        Nice to meet you, come join our community:
        <br><b>Login</b> If you already have an account.</br>
        <br><b>Register</b> to get started with the app.</br>
    </string>
    <string name="btn_register">Register</string>
    <string name="illustration_img">illustration_image</string>
    <string name="btn_login">Login</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color="00C988"><b>Login</b></font>
        If you already have an account.
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password</string>
    <string name="login_havent_account">
        i don\'t have an account
        <font color="#00C988"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#00C988"><b>Register</b></font>
        to get started with the app.
    </string>
    <string name="register_fullname">Your full name</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_password">Your password</string>
    <string name="register_confirm_password">Confirm Password</string>

    <string name="register_have_account">
        I already have an account
        <font color="#000908"><b>Login</b></font>
    </string>
</resources>