<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragment.WelcomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="100dp"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/profileUser"
            android:src="@drawable/ic_circle_account"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/register_username"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/purple_500"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCard"
        app:layout_constraintVertical_chainStyle="packed" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        style="@style/ButtonGreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_camera"
        app:layout_constraintBottom_toTopOf="@+id/btnGameStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGameStart"
        style="@style/ButtonGreen"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_game_start"
        app:layout_constraintBottom_toTopOf="@+id/btn_list_of_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_list_of_sign"
        style="@style/ButtonGreen"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_list_of_sign"
        app:layout_constraintBottom_toTopOf="@+id/btn_leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGameStart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_leaderboard"
        style="@style/ButtonGreen"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_leader"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_list_of_sign" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        style="@style/ButtonGreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
